# devalign-api

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DECISIONS.md  Dockerfile  Makefile  PROGRESS.md  README.md  STACK.md  alembic.ini  bash.exe.stackdump  diag_test.py  docker-compose.yml  pyproject.toml  sonar-project.properties
.agents/skills/architecture/: SKILL.md
.agents/skills/implementation/: SKILL.md
.agents/skills/planning/: SKILL.md
.agents/skills/review/: SKILL.md
.agents/skills/software-architecture-planner/: SKILL.md
.agents/skills/testing/: SKILL.md
.github/workflows/: ci.yml  trigger_ml_normalization.yml
alembic/: env.py
alembic/versions/: 001_create_all_tables.py  002_add_is_normalized_to_job_offers.py  0e407f4cfc27_user_sync_and_rls.py  3e85e88d6528_alter_vector_dimensions.py  42d733c42950_add_esco_and_ict_evidence_fields.py  6d3f97e10a1d_add_status_to_cv_documents.py  6e185a40579f_add_embedding_to_skills.py  6e80d94abe6a_add_domain_and_cluster_insights.py  6f7738c1f473_add_skill_weight_and_cluster_offer_count.py  75e453970cbd_increase_skill_name_length.py  91474942c0b8_knowledge_graph_skills.py  9354eebfaceb_create_profile_skills_table.py  af8815637327_add_cv_id_to_profiles.py  c412290f9981_extend_profiles_table.py  cd103c833107_increase_alias_name_length.py  dbd782abdd17_add_core_domains_to_skills.py
docs/: PRD.md  decisions.md
scratch/: batch_name_all.py  check_clusters.py  old_use_cases.py  patch.py  query_db.py  test_embed.py  test_groq.py  test_supa.py
scripts/: backfill_core_domains.py  calculate_market_insights.py  classify_domains.py  clean_skills.py  migrate_skills_to_graph.py  reembed_skills.py  seed_demo_data.py  seed_esco.py  seed_skill_taxonomy.py  train_hdbscan.py  train_kmodes.py  train_kmodes_legacy.py  validate_app.py
src/: config.py  dependencies.py  main.py
src/delivery/application/: dtos.py  use_cases.py
src/delivery/domain/: entities.py  ports.py
src/delivery/infrastructure/: models.py  repository.py  supabase_storage.py
src/delivery/interface/: router.py
src/genai/application/: dtos.py  use_cases.py
src/genai/domain/: entities.py  ports.py
src/genai/infrastructure/: langchain_chain.py  models.py  roadmap_repository.py  vector_store.py
src/genai/interface/: router.py
src/ml_engine/application/: dtos.py  skill_catalog_service.py  use_cases.py
src/ml_engine/domain/: entities.py  ports.py
src/ml_engine/infrastructure/: cluster_repository.py  cv_parser.py  embeddings.py  job_offer_repository.py  llm_client.py  models.py  skill_repository.py  user_profile_repository.py
src/ml_engine/interface/: router.py
src/scraper/domain/: entities.py  ports.py
src/scraper/infrastructure/: models.py
src/scraper/interface/: router.py
src/shared/: __init__.py  database.py  exceptions.py  logging.py  middleware.py  security.py  supabase_client.py
tests/: conftest.py
tests/unit/: test_domain_affinities.py  test_evaluate_cluster.py  test_exceptions.py  test_health.py  test_middleware_and_handlers.py  test_reset_account.py  test_skills_update.py  test_upward_inference.py
